# showdown-bot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
browser/: inject-login.js  local-client.html
data/opponents/: pool_metadata.json
data/sample_teams/: gen9ou.txt
data/self_play_pool/: pool_metadata.json
docs/plans/: bench_gated_promotion.md
extension/: content.js  manifest.json  page-script.js  styles.css
scripts/: coach_server.py  compare_models.py  create_icons.py  evaluate.py  human_play.py  monitor_training.sh  monitor_training_ou.sh  play.py  run_training.sh  run_training_multiproc.sh  run_training_ou.sh  run_training_ou_parallel.sh  run_training_parallel.sh  start_local_play.sh  train.py  train_distributed.py  train_multiproc.py  train_ou.py  tune.py  validate_teams.py
src/showdown_bot/: __init__.py  config.py
src/showdown_bot/browser/: __init__.py
src/showdown_bot/environment/: __init__.py  battle_env.py  state_encoder.py
src/showdown_bot/evaluation/: __init__.py  elo.py
src/showdown_bot/models/: __init__.py  network.py
src/showdown_bot/ou/: README.md  __init__.py
src/showdown_bot/ou/player/: __init__.py  network.py  ou_player.py  state_encoder.py  team_preview.py
src/showdown_bot/training/: __init__.py  buffer.py  inference_server.py  ppo.py  self_play.py  trainer.py
tests/: __init__.py  test_coach.py  test_distributed.py  test_inference_server.py  test_integration.py  test_memory.py  test_network.py  test_ou_curriculum.py  test_ou_joint_trainer.py  test_ou_self_play.py  test_ou_teambuilder.py  test_ppo_buffer.py  test_state_encoder.py  test_trainer.py
(+16 files in other folders)
