[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "showdown-bot"
version = "0.1.0"
description = "A reinforcement learning bot for Pokemon Showdown Gen 9 Random Battles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Charlie" }
]
keywords = ["pokemon", "showdown", "reinforcement-learning", "machine-learning", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "poke-env>=0.7.0",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "tensorboard>=2.14",
    "tqdm>=4.66",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
train = "scripts.train:main"
evaluate = "scripts.evaluate:main"
play = "scripts.play:main"

[tool.hatch.build.targets.wheel]
packages = ["src/showdown_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
